[gd_scene load_steps=26 format=3 uid="uid://bexhqp2l7qrs5"]

[ext_resource type="Script" path="res://scripts/ramiro.gd" id="1_c7fp5"]
[ext_resource type="Texture2D" uid="uid://ptrdoqj1tc8x" path="res://sprites/ramiro.png" id="2_3vhbr"]
[ext_resource type="Texture2D" uid="uid://bwtresq0u6y3j" path="res://sprites/sillyguy_idle-Sheet.png" id="3_ivj1f"]
[ext_resource type="Texture2D" uid="uid://4bgodo4d3j2s" path="res://sprites/globo.png" id="3_ta4p0"]
[ext_resource type="Texture2D" uid="uid://qe8cl7825m8e" path="res://sprites/ramiro_lupajuego-Sheet.png" id="3_tbjoy"]
[ext_resource type="FontFile" uid="uid://cj2ccsjuqok0k" path="res://fonts/manaspc.ttf" id="4_5v15f"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_j253i"]
size = Vector2(108, 69)

[sub_resource type="AtlasTexture" id="AtlasTexture_7m0kc"]
atlas = ExtResource("2_3vhbr")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ob3d4"]
atlas = ExtResource("3_ivj1f")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_s5jf7"]
atlas = ExtResource("3_ivj1f")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_bafyf"]
atlas = ExtResource("3_ivj1f")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_d1wdk"]
atlas = ExtResource("3_ivj1f")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_3ten3"]
atlas = ExtResource("3_ivj1f")
region = Rect2(256, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_oa17k"]
atlas = ExtResource("3_ivj1f")
region = Rect2(320, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_6vuf3"]
atlas = ExtResource("3_ivj1f")
region = Rect2(384, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_3lahp"]
atlas = ExtResource("3_tbjoy")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_iaxir"]
atlas = ExtResource("3_tbjoy")
region = Rect2(64, 0, 64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_cbqy3"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_7m0kc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ob3d4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_s5jf7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bafyf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d1wdk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3ten3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_oa17k")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6vuf3")
}],
"loop": true,
"name": &"idle",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_3lahp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_iaxir")
}],
"loop": true,
"name": &"talk",
"speed": 10.0
}]

[sub_resource type="Animation" id="Animation_45grp"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("TextureRect:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("RichTextLabel:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_4yhak"]
resource_name = "fadein"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("TextureRect:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("RichTextLabel:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.2, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_xnbuk"]
resource_name = "fadeout"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("TextureRect:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.0333333, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("RichTextLabel:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.0333333, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_k31dk"]
_data = {
"RESET": SubResource("Animation_45grp"),
"fadein": SubResource("Animation_4yhak"),
"fadeout": SubResource("Animation_xnbuk")
}

[sub_resource type="Animation" id="Animation_xe83o"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("RichTextLabel:visible_ratio")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_48rox"]
resource_name = "text"
length = 12.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("RichTextLabel:visible_ratio")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1.43333, 2.1, 4.86667, 5.53333, 8.76667),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 0,
"values": [0.0, 0.150485, 0.15, 0.521353, 0.521, 1.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(),
"transitions": PackedFloat32Array(),
"update": 1,
"values": []
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_74cua"]
_data = {
"RESET": SubResource("Animation_xe83o"),
"text": SubResource("Animation_48rox")
}

[node name="Ramiro" type="Area2D"]
position = Vector2(998, 149)
script = ExtResource("1_c7fp5")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-24, -14.5)
shape = SubResource("RectangleShape2D_j253i")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(1, 0)
sprite_frames = SubResource("SpriteFrames_cbqy3")
animation = &"talk"
autoplay = "idle"
frame_progress = 0.894688
flip_h = true

[node name="TextureRect" type="TextureRect" parent="."]
offset_left = -40.0
offset_top = -179.0
offset_right = 190.0
offset_bottom = 51.0
texture = ExtResource("3_ta4p0")

[node name="RichTextLabel" type="RichTextLabel" parent="."]
offset_left = 14.0
offset_top = -99.0
offset_right = 177.0
offset_bottom = -24.0
scale = Vector2(0.8, 0.8)
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_fonts/normal_font = ExtResource("4_5v15f")
theme_override_font_sizes/normal_font_size = 12
text = "SPACE TO JUMP! ALSO SHIFT TO RUN IF YOU'RE IMPATIENT, ALTHOUGH I'D ADVISE U TO TAKE THINGS SLOW IN LIFE."
fit_content = true
visible_characters = 0
visible_ratio = 0.0

[node name="TalkingTime" type="Timer" parent="."]
wait_time = 4.75
one_shot = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_k31dk")
}

[node name="AnimationPlayer2" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_74cua")
}
speed_scale = 2.0

[node name="SoundTime" type="Timer" parent="."]
wait_time = 0.08
one_shot = true

[node name="AnimationTime" type="Timer" parent="."]
wait_time = 0.1

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
[connection signal="timeout" from="TalkingTime" to="." method="_on_talking_time_timeout"]
[connection signal="timeout" from="SoundTime" to="." method="_on_sound_time_timeout"]
[connection signal="timeout" from="AnimationTime" to="." method="_on_animation_time_timeout"]
